# flextrace

./: Cargo.toml  README.md  flextrace.out  l.og  trace.fcap
.github/workflows/: debug.yml  release_unstable.yml  rust.yml  test.yml
fir/: Cargo.toml  build.rs
fir-common/: Cargo.toml
fir-common/src/: .lib.rs  lib.rs
fir-ebpf/: Cargo.toml
fir-ebpf/src/: .main.rs  main.rs
fir/src/: .main.rs  main.rs
flextrace/: Cargo.toml  build.rs
flextrace-common/: Cargo.toml
flextrace-common/src/: lib.rs
flextrace-ebpf/: Cargo.toml
flextrace-ebpf/src/: main.rs  probes.rs
flextrace/src/: .probes.rs  lib.rs  main.rs  perf.rs  probes.rs  tui.rs
