[package]
name = "fir-common"
version = "0.1.0"
edition.workspace = true

license.workspace = true

[features]
default = []
user = ["dep:aya-obj", "dep:aya"]

[dependencies]
aya-obj = { version = "0.2", optional = true, default-features = false }
aya = { workspace = true, optional = true}

[lib]
path = "src/lib.rs"
