[package]
name = "fir-ebpf"
version = "0.1.0"
edition.workspace = true

[dependencies]
fir-common = { path = "../fir-common", default-features = false }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "fir"
path = "src/main.rs"
