[package]
name = "fir-ebpf"
version = "0.1.0"
edition.workspace = true

[dependencies]
fir-common = { path = "../fir-common", default-features = false }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }
num_enum = { version = "0.7.5", default-features = false }

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "fir"
path = "src/main.rs"
