[package]
name = "flextrace-ebpf"
version = "0.1.0"
edition.workspace = true

[dependencies]
flextrace-common = { path = "../flextrace-common", default-features = false }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }
num_enum = { version = "0.7.5", default-features = false }

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "flextrace"
path = "src/main.rs"
